# ml-gap-finder

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.streamlit/: config.toml
config/: __init__.py  settings.py
scripts/: init_db.py  run_evaluation.py  run_ingestion.py
src/: __init__.py  main.py
src/api/: __init__.py  schemas.py
src/api/routes/: __init__.py  evidence.py  gaps.py  hypotheses.py  literature.py
src/db/: __init__.py  neo4j.py  postgres.py  qdrant.py  redis.py
src/evaluation/: __init__.py  tier1.py  tier2.py  tier3.py
src/ingestion/: __init__.py  arxiv.py  method_extractor.py  papers_with_code.py  semantic_scholar.py
src/llm/: __init__.py  client.py  prompts.py
src/services/: __init__.py  evidence_retriever.py  gap_detector.py  hypothesis_generator.py  literature_positioner.py
tests/: __init__.py  conftest.py  test_gap_detector.py  test_hypothesis_generator.py  test_llm_client.py
ui/: api_client.py  app.py
ui/components/: results.py  sidebar.py  styles.py
ui/pages/: 1_Gap_Detection.py  2_Evidence_Retrieval.py  3_Hypothesis_Generator.py  4_Literature_Position.py
