[project]
name = "ml-gap-finder"
version = "0.1.0"
description = "ML Literature Gap Finder & Hypothesis Generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database clients
    "neo4j>=5.15.0",
    "psycopg[binary]>=3.1.0",
    "qdrant-client>=1.7.0",
    "redis>=5.0.0",

    # LLM Providers
    "anthropic>=0.18.0",
    "ollama>=0.1.6",

    # ML & Embeddings
    "sentence-transformers>=2.3.0",
    "torch>=2.1.0",

    # Data processing
    "httpx>=0.26.0",
    "arxiv>=2.1.0",
    "pymupdf>=1.23.0",

    # Utilities
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",

    # Scientific computing (for evaluation)
    "scipy>=1.11.0",
    "numpy>=1.24.0",

    # UI
    "streamlit>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
